--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                     <div class="col-md-6 d-flex justify-content-center">
                         <div class="textbox">
                             You can create your own custom avatar for the masthead, change the icon in the dividers, and
-                            add your email address to the contact form to make it fully functional!
+                            add your email address to the contact form to make it fully functional
+                            contact form to make it fully functional!
                         </div>
                     </div>
                 </div>
