--- a/index.html
+++ b/index.html
@@ -212,8 +212,7 @@
                 <div class="col-md-4">
                     <div class="textbox">
                         <h1>ABOUT FREELANCER</h1>
-                        <p>Freelance is a free to use, MIT licensed Bootstrap theme created by <span> Start Bootstrap
-                                .</span></p>
+                        <p>Freelance is a free to use, MIT licensed Bootstrap theme created by Start Bootstrap.</p>
                     </div>
                 </div>
             </div>
